[gd_scene load_steps=8 format=4 uid="uid://cnwh2kq1086sx"]

[ext_resource type="Script" uid="uid://d4iyqcj1ni2bh" path="res://src/levels/test_level.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://choluaobbfxji" path="res://scenes/game_objects/player.tscn" id="2_eeqru"]
[ext_resource type="TileSet" uid="uid://0clrsp5g8tjo" path="res://tilemap.tres" id="2_npghq"]
[ext_resource type="PackedScene" uid="uid://f5tgp3js8eg3" path="res://scenes/game_objects/ant_spawner.tscn" id="3_gl321"]
[ext_resource type="PackedScene" uid="uid://no7g5fbjmhf6" path="res://scenes/game_objects/game_timer.tscn" id="4_ieimj"]
[ext_resource type="FontFile" uid="uid://bfoead15dvol3" path="res://vfx/fonts/shovel-knight-extended.ttf" id="5_font"]

[sub_resource type="LabelSettings" id="LabelSettings_timer"]
font = ExtResource("5_font")
font_size = 32

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_script")

[node name="GroundLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4//v/AAACAAQAAAD5//v/AAACAAQAAAD6//v/AAACAAQAAAD7//v/AAACAAQAAAD8//v/AAACAAQAAAD9//v/AAACAAQAAAD+//v/AAACAAQAAAD///v/AAACAAQAAAAAAPv/AAACAAQAAAABAPv/AAACAAQAAAACAPv/AAACAAQAAAADAPv/AAACAAQAAAAEAPv/AAACAAQAAAAEAPz/AAACAAQAAAAFAPz/AAACAAQAAAAGAPz/AAACAAQAAAAGAPv/AAACAAQAAAAFAPv/AAACAAQAAAADAPz/AAACAAQAAAACAPz/AAACAAQAAAABAPz/AAACAAQAAAAAAPz/AAACAAQAAAD///z/AAACAAQAAAD+//z/AAADAAYAAAD9//z/AAACAAQAAAD8//z/AAACAAQAAAD7//z/AAACAAQAAAD6//z/AAABAAYAAAD5//z/AAACAAQAAAD5//3/AAACAAQAAAD5//7/AAACAAQAAAD5////AAACAAQAAAD5/wAAAAACAAQAAAD5/wEAAAACAAQAAAD5/wIAAAACAAQAAAD5/wMAAAABAAYAAAD6/wMAAAACAAQAAAD7/wMAAAACAAQAAAD8/wMAAAACAAQAAAD9/wMAAAACAAQAAAD+/wMAAAACAAQAAAD//wMAAAACAAQAAAAAAAMAAAACAAQAAAABAAMAAAACAAQAAAACAAMAAAACAAQAAAADAAMAAAACAAQAAAAEAAMAAAACAAQAAAAFAAMAAAACAAQAAAAGAAMAAAACAAQAAAAGAAIAAAACAAQAAAAGAAEAAAACAAQAAAAGAAAAAAACAAQAAAAFAP//AAACAAQAAAAFAP7/AAACAAQAAAAFAP3/AAACAAQAAAAGAP3/AAACAAQAAAAGAP7/AAACAAQAAAAGAP//AAABAAQAAAAFAAAAAAACAAQAAAAEAAAAAAACAAQAAAABAP//AAACAAQAAAABAP7/AAACAAQAAAAAAP7/AAACAAQAAAD///7/AAACAAQAAAD///3/AAACAAQAAAD+//3/AAACAAQAAAD9//3/AAACAAQAAAD8//3/AAACAAQAAAD8//7/AAACAAQAAAD7//7/AAACAAQAAAD6//7/AAACAAQAAAD7//3/AAACAAQAAAACAP3/AAACAAQAAAACAP7/AAADAAQAAAD+//7/AAACAAQAAAD9//7/AAACAAQAAAD8////AAABAAYAAAD7////AAACAAQAAAD7/wAAAAACAAQAAAD7/wEAAAACAAQAAAD6/wAAAAABAAQAAAD6////AAACAAQAAAD6/wEAAAACAAQAAAD6/wIAAAACAAQAAAD7/wIAAAACAAQAAAD8/wEAAAACAAQAAAD8/wAAAAACAAQAAAD9////AAACAAQAAAD9/wAAAAACAAQAAAD9/wEAAAACAAQAAAD+////AAACAAQAAAD+/wAAAAACAAQAAAD/////AAACAAQAAAAAAP//AAACAAQAAAABAAAAAAACAAQAAAAAAAAAAAACAAQAAAD//wAAAAACAAQAAAD+/wEAAAACAAQAAAD//wEAAAACAAUAAAAAAAEAAAACAAQAAAABAAEAAAACAAQAAAACAAEAAAACAAQAAAADAAEAAAACAAQAAAAEAAEAAAABAAYAAAAEAAIAAAACAAQAAAAFAAIAAAACAAQAAAAFAAEAAAACAAQAAAADAAIAAAACAAQAAAACAAIAAAACAAQAAAABAAIAAAACAAQAAAAAAAIAAAACAAQAAAD//wIAAAACAAQAAAD+/wIAAAACAAQAAAD9/wIAAAACAAQAAAD8/wIAAAACAAQAAAD4//z/AAACAAQAAAD4////AAACAAQAAAD4/wEAAAACAAQAAAD4/wIAAAACAAQAAAD4//3/AAACAAQAAAD4/wMAAAACAAQAAAD4/wQAAAACAAQAAAD4//7/AAABAAQAAAD4/wAAAAACAAQAAAAGAAQAAAACAAQAAAD6/wQAAAACAAQAAAD//wQAAAACAAQAAAACAAQAAAACAAQAAAAAAAQAAAACAAQAAAD7/wQAAAACAAQAAAD5/wQAAAACAAQAAAAEAAQAAAACAAQAAAAFAAQAAAACAAQAAAD9/wQAAAACAAQAAAD+/wQAAAACAAQAAAD8/wQAAAACAAQAAAABAAQAAAACAAQAAAADAAQAAAACAAQAAAD6//3/AAACAAQAAAAAAP3/AAABAAYAAAADAAAAAAACAAQAAAADAP//AAACAAQAAAADAP7/AAACAAQAAAACAP//AAACAAQAAAACAAAAAAACAAQAAAAEAP//AAACAAQAAAAEAP7/AAACAAQAAAAEAP3/AAABAAYAAAADAP3/AAACAAQAAAABAP3/AAACAAQAAAAHAAQAAAABAAUAAAAHAPr/AAABAAUAAAD3//3/AAABAAUAAAD3//7/AAABAAUAAAD3////AAABAAUAAAD3/wAAAAABAAUAAAD3/wEAAAABAAUAAAD3/wIAAAABAAUAAAD3/wMAAAABAAUAAAD3/wQAAAABAAUAAAD3/wUAAAABAAUAAAD4/wUAAAABAAUAAAD5/wUAAAABAAUAAAD6/wUAAAABAAUAAAD7/wUAAAABAAUAAAD8/wUAAAABAAUAAAD9/wUAAAABAAUAAAD+/wUAAAABAAUAAAD//wUAAAABAAUAAAAAAAUAAAABAAUAAAABAAUAAAABAAUAAAACAAUAAAABAAUAAAADAAUAAAABAAUAAAAEAAUAAAABAAUAAAAFAAUAAAABAAUAAAAGAAUAAAABAAUAAAAHAAUAAAABAAUAAAAHAAMAAAABAAUAAAAHAAIAAAABAAUAAAAHAAEAAAABAAUAAAAHAAAAAAABAAUAAAAHAP//AAABAAUAAAAHAP7/AAABAAUAAAAHAP3/AAABAAUAAAAHAPz/AAABAAUAAAAHAPv/AAABAAUAAAAGAPr/AAABAAUAAAAFAPr/AAABAAUAAAAEAPr/AAABAAUAAAADAPr/AAABAAUAAAACAPr/AAABAAUAAAABAPr/AAABAAUAAAAAAPr/AAABAAUAAAD///r/AAABAAUAAAD+//r/AAABAAUAAAD9//r/AAABAAUAAAD8//r/AAABAAUAAAD7//r/AAABAAUAAAD6//r/AAABAAUAAAD5//r/AAABAAUAAAD4//r/AAABAAUAAAD3//r/AAABAAUAAAD3//v/AAABAAUAAAD3//z/AAABAAUAAAA=")
tile_set = ExtResource("2_npghq")

[node name="FoliageLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6//3/AAACAAAAAAAFAAIAAAADAAAAAAD8/wIAAAADAAAAAAAEAP7/AAABAAAAAAD9/wAAAAABAAAAAAABAPv/AAAEAAEAAAABAPz/AAAEAAIAAAACAPv/AAAFAAEAAAACAPz/AAAFAAIAAAA=")
tile_set = ExtResource("2_npghq")

[node name="ground" type="Sprite2D" parent="."]

[node name="Ants" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-10, 0)
zoom = Vector2(5.8, 5.8)

[node name="Player" parent="." instance=ExtResource("2_eeqru")]
position = Vector2(2, 155)

[node name="AntSpawner" parent="." instance=ExtResource("3_gl321")]

[node name="GameTimer" parent="." instance=ExtResource("4_ieimj")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 40.0
offset_right = 81.0
offset_bottom = 80.0
grow_horizontal = 2
text = "00:10"
label_settings = SubResource("LabelSettings_timer")
horizontal_alignment = 1
